feat(changelog): add support for generating and toggling CHANGELOG.md
- 引入新的 CHANGELOG 图标并在 UI 及动作中使用
- 实现 GenerateChangelogFileAction 的更新逻辑, 包括哑模式检查和根据文件存在决定文本
- 新增 SettingsState.generateChangelogFile 并在侧边栏及设置页提供勾选框
- 在 ChangelogService 中根据设置决定写文件, 使用 Files.writeString 等新 I/O 方法
- 更新国际化资源和消息键, 确保多语言支持